--- a/ROS2/src/VzenseROS/package.xml
+++ b/ROS2/src/VzenseROS/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>VzenseROS</name>
+  <name>vzenseros</name>
   <version>1.0.1</version>
-  <description>VzenseROS package</description>
+  <description>vzenseros package</description>
   <maintainer email="info@vzense.com">vzense</maintainer>
   <license>TODO: License declaration</license>
 
@@ -15,7 +15,9 @@
   <depend>cv_bridge</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
+  <depend>tf2_geometry_msgs</depend>
   <depend>pcl_conversions</depend>
+  <depend>image_transport</depend>
   
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
